# polkadexTEE-worker

./: .gitignore  Cargo.toml  Cargo.toml.orig  Makefile  README.md  docker-start.sh  license_header_scs.txt  rust-toolchain.orig  rustfmt.toml
.github/workflows/: build.yml  build_and_test.unused.yml  integration-testing.yml
.github/workflows/integration_testing/: node.sh  openware-exec.sh  openware.sh  tee.sh
ci/: install_rust.sh
client/: Cargo.toml  Cargo.toml.orig  demo_openfinex.py  demo_polkadex_gw.sh  integration_testing.py  polkadex_commands.py  polkadex_demo_happy_flow.py  polkadex_demo_scenario_three.py  polkadex_demo_scenario_two.py  polkadex_test.py  test_temp.py
client/src/: main.rs  main.rs.orig  ocex_commands.rs
demo-setup/: DockeFileEnclave  docker-compose.yml  start.sh
demo-setup/compose/: structure.sql  upstream_compose.yml
demo-setup/gateway/: DockeFile  Dockerfile  docker-compose.yml
demo-setup/polkadex/: DockerFile
enclave/: Cargo.toml  Cargo.toml.orig  Enclave.edl  Makefile  Makefile.orig  rustfmt.toml
enclave/chain_relay/: Cargo.toml  Cargo.toml.orig
enclave/chain_relay/src/: error.rs  justification.rs  lib.rs  lib.rs.orig  state.rs
enclave/openfinex/: Cargo.toml
enclave/openfinex/src/: lib.rs  types.rs
enclave/src/: accounts_nonce_storage.rs  accounts_storage.rs  attestation.rs  cert.rs  cert.rs.orig  channel_storage.rs  cid.rs  constants.rs  constants.rs.orig  ed25519.rs  error.rs  extrinsic_deposit.rs  extrinsic_handler.rs  happy_path.rs  hex.rs  integration_test.rs  io.rs  ipfs.rs  ipfs.rs.orig  lib.rs  lib.rs.orig  nonce_handler.rs  nonce_storage.rs  openfinex_api.rs  openfinex_events.rs  polkadex.rs  polkadex_balance_storage.rs  polkadex_gateway.rs  polkadex_orderbook_storage.rs  rpc.rs  rsa3072.rs  ss58check.rs  state.rs  test_orderbook_storage.rs  test_polkadex_balance_storage.rs  test_polkadex_gateway.rs  test_proxy.rs  tests.rs  tests.rs.orig  tls_ra.rs  (+3 more)
enclave/src/accounts_nonce_storage/: accounts_storage.rs  error.rs  mod.rs  nonce_storage.rs  test_proxy.rs
enclave/src/ocall/: attestation_ocall.rs  ffi.rs  ipfs_ocall.rs  mod.rs  ocall_component_factory.rs  on_chain_ocall.rs  rpc_ocall.rs
enclave/src/openfinex/: client_utils.rs  fixed_point_number_converter.rs  jwt.rs  market.rs  market_repo.rs  mod.rs  number_value_conversion.rs  openfinex_api.rs  openfinex_api_impl.rs  openfinex_client.rs  openfinex_types.rs  request_builder.rs  request_id_generator.rs  response_handler.rs  response_lexer.rs  response_object_mapper.rs  response_parser.rs  string_serialization.rs
enclave/src/polkadex_balance_storage/: balance_storage.rs  balances.rs  mod.rs  polkadex_balance_key.rs
enclave/src/polkadex_cache/: cache_api.rs  cancel_order_cache.rs  create_order_cache.rs  market_cache.rs  mod.rs
enclave/src/polkadex_nonce_storage/: mod.rs  nonce_handler.rs  nonce_storage.rs
enclave/src/rpc/: api.rs  api.rs.orig  basic_pool.rs  error.rs  io_handler_extensions.rs  polkadex_rpc_gateway.rs  return_value_encoding.rs  (+16 more)
polkadex-benchmarking/: README.md  build.sbt
polkadex-benchmarking/.bsp/: sbt.json
polkadex-primitives/: Cargo.toml
polkadex-primitives/src/: accounts.rs  lib.rs  openfinex.rs  types.rs
primitives/api-client-extensions/: Cargo.toml
primitives/api-client-extensions/src/: account.rs  chain.rs  pallet_teerex.rs
primitives/enclave-api/: Cargo.toml
primitives/enclave-api/ffi/src/: lib.rs
primitives/enclave-api/src/: direct_request.rs  enclave_base.rs  enclave_test.rs  remote_attestation.rs  side_chain.rs  teerex_api.rs
primitives/get-storage-verified/: Cargo.toml
primitives/node/: Cargo.toml
primitives/node/src/: lib.rs
primitives/ocall-api/: Cargo.toml
primitives/pallet-teerex-storage/: Cargo.toml
primitives/sidechain/: Cargo.toml
primitives/storage/: Cargo.toml
primitives/test-utils/: Cargo.toml
primitives/worker/: Cargo.toml
stf/: Cargo.toml  Cargo.toml.orig
stf/src/: cli.rs  cli.rs.orig  lib.rs  lib.rs.orig  order.rs  sgx.rs  sgx_ext_mock.rs  stf_sgx.rs  stf_sgx_primitives.rs  test_genesis.rs
stf/src/cli_utils/: account_parsing.rs  common_operations.rs  common_types.rs  mod.rs
stf/src/commands/: account_details.rs  cancel_order.rs  common_args.rs  common_args_processing.rs  get_balance.rs  mod.rs  place_order.rs  test_utils.rs  withdraw.rs
stf/src/top/: mod.rs
substratee-node-primitives/: Cargo.toml
substratee-node-primitives/src/: lib.rs
substratee-worker-primitives/: Cargo.toml
substratee-worker-primitives/src/: lib.rs  signed.rs
worker/: Cargo.toml  Cargo.toml.orig
worker/polkadex-orderbook-mirror.bin/: IDENTITY  LOG  OPTIONS-000006
worker/rpc/client/: Cargo.toml
worker/rpc/client/src/: direct_client.rs
worker/rpc/server/src/: lib.rs  mock.rs
worker/src/: cli.yml  config.rs  constants.rs  db_handler.rs  ipfs.rs  ipfs_polkadex.rs  main.rs  main.rs.orig  node_api_factory.rs  polkadex.rs  polkadex_db.rs  sync_block_gossiper.rs  test_polkadex_db.rs  tests_orderbook_mirror.rs  tests_polkadex_DB.rs  worker.rs
worker/src/direct_invocation/: direct_invocation_ocall.rs  mod.rs  polkadex_direct_server.rs  ws_direct_server_runner.rs  ws_handler.rs
worker/src/enclave/: api.rs  api.rs.orig  mod.rs  mod.rs.orig  openfinex_tcp_client.rs  tls_ra.rs  worker_api_direct_server.rs  worker_api_direct_server.rs.orig
worker/src/globals/: worker.rs
worker/src/ocall_bridge/: bridge_api.rs  component_factory.rs  ipfs_ocall.rs  remote_attestation_ocall.rs  worker_on_chain_ocall.rs
worker/src/ocall_bridge/ffi/: get_quote.rs  ipfs.rs  mod.rs  send_block_and_confirmation.rs  send_status.rs  update_status_event.rs  worker_request.rs
worker/src/polkadex_db/: balances.rs  disc_storage_handler.rs  disk_storage_handler.rs  general_db.rs  ipfs_storage_handler.rs  mock.rs  mod.rs  nonce.rs  orderbook.rs  tests_orderbook_mirror.rs
worker/src/tests/: commons.rs  direct_request_mock.rs  ecalls.rs  enclave_api_mock.rs  integration_tests.rs  integration_tests.rs.orig  mock.rs  mod.rs  mod.rs.orig  worker.rs
worker/worker-api/: Cargo.toml
worker/worker-api/src/: direct_client.rs
(+57 files in other folders)
