[workspace]
members = [
    "worker",
    "worker/worker-api",
    "substratee-node-primitives",
    "substratee-worker-primitives",
    "polkadex-primitives",
    "client",
    "stf",
    #"enclave",
]

#[patch."https://github.com/scs/substrate-api-client"]
#substrate-api-client = { path = "../substrate-api-client" }
#substrate-client-keystore = { path = "../substrate-api-client/client-keystore" }