[workspace]
resolver = "2"
members = [
    "client",
    "primitives/api-client-extensions",
    "primitives/enclave-api",
    "primitives/enclave-api/ffi",
    "primitives/node",
    "primitives/ocall-api",
    "primitives/get-storage-verified",
    "primitives/pallet-teerex-storage",
    "primitives/settings",
    "primitives/sgx/crypto",
    "primitives/sgx/io",
    "primitives/sidechain",
    "primitives/sidechain/primitives",
    "primitives/storage",
    "primitives/test-utils",
    "primitives/worker",
    "polkadex-primitives",
    "stf",
    "worker",
    "worker/rpc/client",
    "worker/rpc/server",
    #	 "enclave",
]

#[patch."https://github.com/scs/substrate-api-client"]
#substrate-api-client = { path = "../substrate-api-client" }
#substrate-client-keystore = { path = "../substrate-api-client/client-keystore" }

#[patch."https://github.com/integritee-network/sgx-runtime"]
#sgx-runtime = { path = "../sgx-runtime/runtime", default-features = false}
#sp-io = { path = "../sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
#sgx-externalities = { path = "../sgx-runtime/substrate-sgx/externalities", default-features = false}

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master"}
orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master"}
orml-vesting = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master"}
orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master"}
