[package]
name = "substratee-client"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
hex = "0.4.2"
json = "0.12.0"
substrate-bip39 = "0.4.2"
tiny-bip39 = "0.6.2"
serde_json = "1.0"
clap = "2.33"
clap-nested = "0.3.1"
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }
base58 = "0.1"
chrono = "*"
blake2-rfc = { version = "0.2.18", default-features = false}
geojson = "0.17"
ws = { version = "0.7", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# scs / integritee
substrate-api-client = { features = ["ws-client"], git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "monthly-2021-08" }
substrate-client-keystore = { git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "monthly-2021-08" }
my-node-runtime = { git = "https://github.com/Polkadex-Substrate/Polkadex", branch = "develop", package = "node-polkadex-runtime" }

# substrate dependencies
sp-runtime = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-application-crypto = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-core = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

#local dependencies
polkadex-sgx-primitives = { path = "../polkadex-primitives" }
substratee-node-primitives = { path = "../primitives/node" }
substratee-worker-primitives = { path = "../primitives/worker" }
substratee-api-client-extensions = { path = "../primitives/api-client-extensions" }
substratee-stf = { path = "../stf" }
substratee-worker-api = { path = "../worker/rpc/client" }
