[package]
name = "polkadex-sgx-primitives"
version = "0.1.0"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git"}
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }


[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
features = ["untrusted_fs","net","backtrace"]
rev = "v1.1.3"
optional = true

[features]
default = ['std']
std = ['polkadex-primitives/std']
sgx = ['sgx_tstd']
