[package]
name = "polkadex-sgx-primitives"
version = "0.1.0"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# substrate
frame-support = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-core = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}

# polkadex
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "main", default-features=false}

# sgx
sgx_tstd = { rev = "v1.1.3", default-features = false, features = ["untrusted_fs","net","backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}


[features]
default = ['std', "full_crypto"]
std = ['polkadex-primitives/std']
sgx = ['sgx_tstd']
full_crypto = ['sp-core/full_crypto']
