[package]
name = "substratee-stf"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[features]
default = ["std"]
sgx = [
    "sgx_tstd",
    "env_logger",
    "log-sgx",
    "sp-io",
    "sgx-runtime",
    "sgx-externalities",
    "derive_more",
    "substratee-worker-primitives",
    "polkadex-sgx-primitives",
]
std = [
    "clap",
    "clap-nested",
    "log",
    "base58",
    "sc-keystore",
    "serde",
    "system/std",
    "sp-core/std",
    "hex",
    "substrate-api-client",
    "substrate-client-keystore",
    "substratee-storage/std",
    "my-node-runtime/std",
    "polkadex-sgx-primitives/std",
]
test = []

[dependencies]
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
clap = { version = "2.33", optional = true }
clap-nested = { version = "0.3.1", optional = true }
log = { version = "0.4", optional = true }
base58 = { version = "0.1", optional = true }
derive_more = { version = "0.99.5", optional = true }
hex = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
codec = { version = "2.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
sgx_tstd = { rev = "v1.1.3", features = ["untrusted_fs","net","backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
substratee-storage = { path = "../primitives/storage", default-features = false }
polkadex-sgx-primitives = { path = "../polkadex-primitives", default-features = false, optional = true }
substratee-worker-primitives = { default-features = false, path = "../primitives/worker", optional = true }

# Substrate dependencies
sp-core = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", features = ["full_crypto"] }
balances = { branch = "master", version = "4.0.0-dev", package = 'pallet-balances', default-features = false, git = "https://github.com/paritytech/substrate.git" }
system = { branch = "master", version = "4.0.0-dev",  package = "frame-system", default-features = false, git = "https://github.com/paritytech/substrate.git" }
support = { branch = "master", version = "4.0.0-dev",  package = "frame-support", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-application-crypto = { branch = "master", version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }

# scs / polkadex
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/Polkadex-Substrate/sgx-runtime", branch = "monthly-2021-09+1", optional = true }
sgx-runtime = { default-features = false, git = "https://github.com/Polkadex-Substrate/sgx-runtime", branch = "monthly-2021-09+1", optional = true }
sgx-externalities = { default-features = false, git = "https://github.com/Polkadex-Substrate/sgx-runtime", branch = "monthly-2021-09+1", optional = true }
my-node-runtime = { package = "node-polkadex-runtime", git = "https://github.com/Polkadex-Substrate/Polkadex", branch = "develop", optional = true }
substrate-api-client = { git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "master", optional = true }
substrate-client-keystore = { git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "master", optional = true }

[dev-dependencies]
sp-keyring = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
