[package]
name = "substratee-worker"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[dependencies]
ws = "0.9.1"
hex = "0.4.3"
log = "0.4"
env_logger = "0.7"
base58 = "0.1"
rust-crypto = "0.2"
clap = { version = "2.33", features = [ "yaml" ] }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
thiserror = "1.0"
dashmap = "4.0.2"
mio = "0.6.21"
dirs = "1.0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonrpsee = { version = "0.2.0", features = ["client", "ws-server", "macros"]}
async-trait = "0.1.50"

# ipfs
ipfs-api = "0.11.0"
cid = "0.7.0"
http = "0.2"
futures = "0.3"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
multihash = "0.14.0"
sha2 = { version = "0.9.5", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }

sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# local
substratee-settings = { path = "../primitives/settings" }
substratee-node-primitives = { path = "../primitives/node" }
substratee-worker-primitives = { path = "../primitives/worker" }
substratee-api-client-extensions = { path = "../primitives/api-client-extensions" }
substratee-worker-api = { path = "rpc/client" }
substratee-worker-rpc-server = { path = "rpc/server" }
substratee-enclave-api = { path = "../primitives/enclave-api" }
substratee-stf = { path = "../stf" }
polkadex-sgx-primitives = { path = "../polkadex-primitives" }

# scs / polkadex
substrate-api-client = { git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "master" }
my-node-runtime = { package = "node-polkadex-runtime", git = "https://github.com/Polkadex-Substrate/Polkadex", branch = "develop" }
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "master" }

# Substrate dependencies
sp-runtime = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }


[features]
default = []
production = ['substratee-settings/production']

[dev-dependencies]
anyhow = "1.0.40"
mockall = "0.10.1"
