[package]
name = "chain-relay"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
derive_more = { version = "0.99.5" }
hash-db = { version = "0.15.2", default-features = false }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
num = { package = "num-traits", version = "0.2", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
finality-grandpa = { version = "0.14.3", default-features = false, features = ["derive-codec"] }

# local deps
substratee-storage = { path = "../../primitives/storage", default-features = false }

# substrate deps
frame-system = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/paritytech/substrate.git" }
sp-core = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git" }
sp-application-crypto = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime-interface = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, features = ["disable_target_static_assertions"],  git = "https://github.com/paritytech/substrate.git" }
sp-trie = { tag = "monthly-2021-08", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
