[package]
name = "openfinex"
version = "0.1.0"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx", default-features = false, features = ["mesalock_sgx"] }
jsonwebtoken = { git = "https://github.com/mesalock-linux/jsonwebtoken-sgx.git", default-features = false }
embedded-websocket = { version = "x.x.x", default-features = false }
sgx_tstd      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }