[package]
name = "substratee-api-client-extensions"
version = "0.8.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }

# substrate
sp-core = { tag = "monthly-2021-08", version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { tag = "monthly-2021-08", version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { tag = "monthly-2021-08", version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git" }

# polkadex
substrate-api-client = { git = "https://github.com/Polkadex-Substrate/substrate-api-client", branch = "monthly-2021-08" }

# local
substratee-node-primitives = { path = "../node"}
