[package]
name = "substratee-enclave-api"
version = "0.8.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
thiserror   = "1.0.25"
log 	    = "0.4"
serde_json 	= "1.0"
codec       = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }

sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper 	= { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

frame-support       = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-core             = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime          = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

substratee-enclave-api-ffi  = { path = "ffi" }
substratee-settings         = { path = "../settings" }


[dev-dependencies]
mockall = { version = "0.10.1" }
