[package]
name = "substratee-node-primitives"
version = "0.8.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sgx_tstd = { rev = "v1.1.3", features = ["untrusted_fs","net","backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
my-node-runtime = { git = "https://github.com/Polkadex-Substrate/Polkadex", branch = "develop", package = "node-polkadex-runtime", optional = true}

sp-core = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = ['std']
std = [ 'codec/std',
        'my-node-runtime',
        'sp-core/std',
        'sp-runtime/std'
]
sgx = [ 'sgx_tstd' ]
